--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -172,16 +172,10 @@ f(x) \oplus g(x) &= xf(x)+xg(x) \\
 c\odot f(x) &= cf(x)
 \end{align*}
 \begin{enumerate}[(a)]
-\item Show that scalar distribution
+\item Show that distribution property
 \[c\odot \left(f(x)\oplus g(x) \right) = c \odot f(x) \oplus c \odot g(x)\]
 holds.
-\item Show that addition associativity
-\[
-  \left( f(x) \oplus g(x) \right) \oplus h(x)
-=
-  f(x) \oplus \left( g(x) \oplus h(x) \right)
-\]
-fails.
+\item Show why \(V\) is not a vector space.
 \end{enumerate}
 \end{problem}
 \begin{solution}
@@ -221,6 +215,7 @@ and
 
 
 Since \(3x^2+3x\not=x+5x^2\), we have shown
+that the vector property
 \(
   \left( f(x) \oplus g(x) \right) \oplus h(x)
 =
@@ -230,56 +225,8 @@ fails.
 \end{enumerate}
 \end{solution}
 
+
 \begin{problem}{V2}
-  Let \(V\) be the set of all non-negative real numbers with the operations
-  \(\oplus\) and \(\odot\) given by, for all \(x,y \in V\) and \(c \in \IR\),
-  \begin{align*}
-  x \oplus y &= x+y \\
-  c \odot x &= |c|x
-  \end{align*}
-
-  List the 8 defining properties of a vector space, and label each as
-  ``TRUE'' or ``FALSE'' as they apply to \(V\). Based on these, conclude whether
-  \(V\) is a vector space or not.
-  \end{problem}
-\begin{solution}
-  \begin{enumerate}[1)]
-    \item Addition associativity:
-          \((x\oplus y)\oplus z = x\oplus (y \oplus z)\)
-          for all \(x,y,z \in V\).
-          \textbf{TRUE}
-    \item Addition commutivity:
-          \(x\oplus y = y \oplus x\)
-          for all \(x,y \in V\).
-          \textbf{TRUE}
-    \item Addition identity:
-           there exists an element \(z \in V\) such that for all \(x \in V\),
-          \(x\oplus z = x\).
-          \textbf{TRUE}
-    \item Addition inverses:
-          for every \(x \in V\) there is an element \(-x \in V\) such that
-          \(x \oplus (-x) = z \).
-          \textbf{FALSE}
-    \item Scalar multiplication associativity:
-          for each \(c,d \in \IR\) and \(x \in V\),
-          \(c\odot (d\odot x) = (cd) \odot x\).
-          \textbf{TRUE}
-    \item Scalar multiplication identity:
-          for all \(x \in V\), \(1 \odot x = x \).
-          \textbf{TRUE}
-    \item Scalar distribution:
-          for all \(x,y \in V\) and \(c \in \IR\),
-          \(c\odot(x\oplus y) = c\odot x \oplus c \odot y\).
-          \textbf{TRUE}
-    \item Vector distribution:
-          for all \(x \in V\) and \(c,d \in \IR\),
-          \( (c+d)\odot x = c\odot x \oplus d \odot x \)
-          \textbf{FALSE}
-  \end{enumerate}
-Since at least one property fails, \(V\) is not a vector space.
-\end{solution}
-
-\begin{problem}{V3}
 Determine if \(\begin{bmatrix} 3 \\ -1 \\ 2 \end{bmatrix} \) is a linear combination of the vectors
 \(\begin{bmatrix} 1 \\ 0 \\ 1 \end{bmatrix} \),
 \(\begin{bmatrix} 3 \\ 2 \\ -1 \end{bmatrix} \), and
@@ -301,13 +248,14 @@ We compute
   0 & 0 & 0 & 1
   \end{bmatrix}
 \]
-Since this corresponds to an inconsistent system of equations, \(\begin{bmatrix} 3 \\ -1 \\ 2 \end{bmatrix} \) is \textbf{not} a linear combination of \(\begin{bmatrix} 1 \\ 0 \\ 1 \end{bmatrix} \),
+Since this corresponds to an inconsistent system of equations, \(\begin{bmatrix} 3 \\ -1 \\ 2 \end{bmatrix} \) is 
+not a linear combination of \(\begin{bmatrix} 1 \\ 0 \\ 1 \end{bmatrix} \),
 \(\begin{bmatrix} 3 \\ 2 \\ -1 \end{bmatrix} \), and
 \(\begin{bmatrix} 1 \\ 1 \\ -1 \end{bmatrix} \).
 
 \end{solution}
 
-\begin{problem}{V4}
+\begin{problem}{V3}
 Determine if  the vectors
 \(\begin{bmatrix} 1 \\ 0 \\ 1 \end{bmatrix} \),
 \(\begin{bmatrix} 3 \\ 2 \\ -1 \end{bmatrix} \), and
@@ -329,10 +277,10 @@ We compute
   0 & 0 & 0
   \end{bmatrix}
 \]
-Since the last row lacks a pivot, the vectors \textbf{do not span} \(\IR^3\).
+Since the last row lacks a pivot, the vectors do not span \(\IR^3\).
 \end{solution}
 
-\begin{problem}{V5}
+\begin{problem}{V4}
 Consider the following two sets of Euclidean vectors.
 \[
   W = \setBuilder{\begin{bmatrix} x \\ y \\ z \end{bmatrix}}{x+y=3z}
@@ -343,10 +291,16 @@ Show that one of these sets is a subspace of \(\IR^3\), and
 that one of the sets is not.
 \end{problem}
 \begin{solution}
-Let
+First consider \(\vec 0\). Since \(0+0=3(0)\), we see that
+\(\vec 0\in W\). But since \(0+0\not=3(0)+2\),
+we see that \(\vec 0\not\in U\). Therefore \(U\) is not a subspace.
+
+To show that \(W\) is a subspace, let
 \(
-  \begin{bmatrix} x_1 \\y_1 \\ z_1 \end{bmatrix},
-  \begin{bmatrix} x_2 \\y_2 \\ z_2 \end{bmatrix} \in W
+  \vec v=\begin{bmatrix} x_1 \\y_1 \\ z_1 \end{bmatrix}\in W
+\) and
+\(
+  \vec w=\begin{bmatrix} x_2 \\y_2 \\ z_2 \end{bmatrix} \in W
 \),
 so we know \(x_1+y_1=3z_1\) and \(x_2+y_2=3z_2\).
 Consider
@@ -359,38 +313,21 @@ Since
 \[
   (x_1+x_2)+(y_1+y_2) = (x_1+y_1)+(x_2+y_2) = 3z_1+3z_2=3(z_1+z_2)
 \]
-we see that \(W\) is closed under vector addition.
+we see that \(\vec v+\vec w\in W\), so \(W\) is closed under vector addition.
+
 Now consider
 \[
-c\begin{bmatrix} x_1 \\y_1 \\ z_1 \end{bmatrix}
+c\vec v
 =\begin{bmatrix} cx_1 \\cy_1 \\ cz_1 \end{bmatrix}
 .\]
 Since
 \[cx_1+cx_2 = c(x_1+x_2)=c(3z_1)=3(cz_1)\]
-we see that \(W\) is closed under scalar multiplication. Therefore \(W\)
-is a subspace of \(\IR^3\).
-
-However, note that
-\(
-  \begin{bmatrix} 0 \\ 5 \\ 1 \end{bmatrix},
-  \begin{bmatrix} 1 \\ 4 \\ 1 \end{bmatrix}
-\)
-are vectors in \(U\) since \(0+5=3(1)+2\) and \(1+4=3(1)+2\).
-But
-\[
-  \begin{bmatrix} 0 \\ 5 \\ 1 \end{bmatrix}
-    +
-  \begin{bmatrix} 1 \\ 4 \\ 1 \end{bmatrix}
-    =
-  \begin{bmatrix} 1 \\ 9 \\ 2 \end{bmatrix}
-\]
-does not belong to \(U\) since \(1+9\not=3(2)+2\).
-Since \(U\) is not closed under vector addition, \(U\) is not a subspace
-of \(\IR^3\).
+we see that \(c\vec v\in W\), so \(W\) is closed under scalar 
+multiplication. Therefore \(W\) is a subspace of \(\IR^3\).
 \end{solution}
 
 
-\begin{problem}{S1}
+\begin{problem}{V5}
 Determine if the vectors
 \( \begin{bmatrix} 3 \\ 2 \\ 1 \\ 0 \end{bmatrix} \) ,
 \( \begin{bmatrix} -1 \\ 1 \\ 2 \\ 3 \end{bmatrix} \) ,
@@ -401,17 +338,17 @@ are linearly dependent or linearly independent.
 \begin{solution}
 Compute
 \[\RREF \begin{bmatrix} 3 & -1 & 0 & 2 \\ 2 & 1 & 1 & 5 \\ 1 & 2 & -1 & 1 \\ 0 & 3 & 1 & 5 \end{bmatrix} =
-\begin{bmatrix} 1 & 0 & 0 & 1 \\ 0 & 1 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \end{bmatrix}.\] discuss those blurred linres and
+\begin{bmatrix} 1 & 0 & 0 & 1 \\ 0 & 1 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \end{bmatrix}.\] 
 Since the fourth column is not a pivot column, the vectors are linearly dependent.
 \end{solution}
 
-\begin{problem}{S2}
+\begin{problem}{V6}
 Determine if the set \[ \left\{
  \begin{bmatrix} 3 \\ 2 \\ 1 \\ 0 \end{bmatrix} ,
  \begin{bmatrix} -1 \\ 1 \\ 2 \\ 3 \end{bmatrix} ,
  \begin{bmatrix} 0 \\ 1 \\ -1 \\ 1 \end{bmatrix} ,
  \begin{bmatrix} 2 \\ 5 \\ 1 \\ 5 \end{bmatrix} \right\} \]
-is a basis of $\IR^4$ or not.
+is a basis of \(\IR^4\) or not.
 \end{problem}
 \begin{solution}
 Compute
@@ -427,8 +364,8 @@ the identity matrix, the vectors do not form a basis.)
 \end{solution}
 
 
-\begin{problem}{S3}
-Find a basis for $W$, the subspace of $\IR^4$ given by
+\begin{problem}{V7}
+Find a basis for \(W\), the subspace of \(\IR^4\) given by
 \[
   W = \vspan \left\{
   \begin{bmatrix} 1 \\ -3 \\ -1 \\ 2 \end{bmatrix} ,
@@ -462,11 +399,11 @@ has pivot columns in the first, second, and fourth columns, and therefore
   \begin{bmatrix} 1 \\ 6 \\ 1 \\ -1 \end{bmatrix}
   \right\}
 \]
-is a basis of $W$.
+is a basis of \(W\).
 \end{solution}
 
-\begin{problem}{S4}
-Find the dimension of $W$, the subspace of $\IR^4$ given by
+\begin{problem}{V8}
+Find the dimension of \(W\), the subspace of \(\IR^4\) given by
 \[
   W = \vspan \left\{
   \begin{bmatrix} 1 \\ -3 \\ -1 \\ 2 \end{bmatrix} ,
@@ -496,25 +433,39 @@ Observe that
 has three pivot columns, and therefore \(\dim W = 3\).
 \end{solution}
 
-\begin{problem}{S5}
-Determine if the polynomials \(3x^3+2x^2+x\), \(-x^3+x^2+2x+3\), \(x^2-x+1\), and \(2x^3+5x^2+x+5\)
-are linearly dependent or linearly independent.
+\begin{problem}{V9}
+Find a basis for the subspace
+\[W=\vspan\setList{3x^3+2x^2+x,-x^3+x^2+2x+3,x^2-x+1,2x^3+5x^2+x+5}\]
+of \(\P^3\).
 \end{problem}
 \begin{solution}
-This question is equivalent to asking if the Euclidean vectors
+This question is equivalent to finding a basis for the subspace
 \[
+  W' = \vspan \setList{
   \begin{bmatrix} 3\\2\\1\\0\end{bmatrix},
   \begin{bmatrix} -1\\1\\2\\3\end{bmatrix},
   \begin{bmatrix} 0\\1\\-1\\1\end{bmatrix},
   \begin{bmatrix} 2\\5\\1\\5\end{bmatrix}
+  }
 \]
-are linearly dependent or linearly independent.
+of Euclidean vectors.
 
 Compute
 \[\RREF \begin{bmatrix} 3 & -1 & 0 & 2 \\ 2 & 1 & 1 & 5 \\ 1 & 2 & -1 & 1 \\ 0 & 3 & 1 & 5 \end{bmatrix} =
 \begin{bmatrix} 1 & 0 & 0 & 1 \\ 0 & 1 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \end{bmatrix}.\]
-Since the fourth column is not a pivot column, the Euclidean vectors
-(and therefore the polynomials) are linearly dependent.
+Since the fourth column is not a pivot column, a basis for \(W'\) is given by
+\[
+  \setList{
+  \begin{bmatrix} 3\\2\\1\\0\end{bmatrix},
+  \begin{bmatrix} -1\\1\\2\\3\end{bmatrix},
+  \begin{bmatrix} 0\\1\\-1\\1\end{bmatrix},
+  }
+\]
+
+Thus a basis for \(W\) is given by
+\[
+  \setList{3x^3+2x^2+x,-x^3+x^2+2x+3,x^2-x+1}
+\]
 \end{solution}
 
 \begin{problem}{S6}
