--- a/tex/modules/6-G/exercises/G1.tex
+++ b/tex/modules/6-G/exercises/G1.tex
@@ -1,179 +1,91 @@
 \begin{problem}{G1}
-Consider the row operation \(R_1+5R_3\to R_1\) applied as follows to show
-\(A\sim B\):
-\[
-A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
-  \sim
-\begin{bmatrix}1+5(7)&2+5(8)&3+5(9)\\4&5&6\\7&8&9\end{bmatrix}=B
-\]
 \begin{enumerate}[(a)]
-\item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 4\), find the determinant of \(RC\).
+\item Find \(3 \times 3\) matrices \(S\) and \(T\) whose left multiplication represents the row operations \(R_1+5R_3\to R_1\) and \(R_2 \leftrightarrow R_3\), respectively.
+\item If \(A \in M_{3,3}\) is a matrix with \(\det A = 4\), find the determinant of \(STA\). 
 \end{enumerate}
 \end{problem}
 \begin{solution}
 \begin{enumerate}
-\item \(R= \begin{bmatrix} 1 & 0 & 5 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\).
-\item \(\det(RC)= \det(R)\det(C)=(1)(4)=4\).
+\item 
+\(S= \begin{bmatrix} 1 & 0 & 5 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\) and 
+\(T= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 0 & 1 \\ 0 & 1 & 0 \end{bmatrix}\).
+\item \(\det(STA)= -4\).
 \end{enumerate}
 \end{solution}
 
 \begin{problem}{G1}
-Consider the row operation \(R_2-4R_3\to R_2\) applied as follows to show
-\(A\sim B\):
-\[
-A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
-  \sim
-\begin{bmatrix}1&2&3\\4-4(7)&5-4(8)&6-4(9)\\7&8&9\end{bmatrix}=B
-\]
 \begin{enumerate}[(a)]
-\item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 7\), find the determinant of \(RC\).
+\item Find \(3 \times 3\) matrices \(S\) and \(T\) whose left multiplication represents the row operations \(R_2-4R_3\to R_2\) and \(R_1 \leftrightarrow R_3\), respectively.
+\item If \(A \in M_{3,3}\) is a matrix with \(\det A = 7\), find the determinant of \(STA\). 
 \end{enumerate}
 \end{problem}
 \begin{solution}
 \begin{enumerate}
-\item \(R= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & -4 \\ 0 & 0 & 1 \end{bmatrix}\).
-\item \(\det(RC)= \det(R)\det(C)=(1)(7)=7\).
+\item 
+\(S= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & -4 \\ 0 & 0 & 1 \end{bmatrix}\) and
+\(T= \begin{bmatrix} 0 & 0 & 1 \\ 0 & 1 & 0 \\ 1 & 0 & 0 \end{bmatrix}\).
+\item \(\det(STA)=-7\).
 \end{enumerate}
 \end{solution}
 
 \begin{problem}{G1}
-Consider the row operation \(R_3-2R_1\to R_3\) applied as follows to show
-\(A\sim B\):
-\[
-A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
-  \sim
-\begin{bmatrix}1&2&3\\4&5&6\\7-2(1)&8-2(2)&9-2(3)\end{bmatrix}=B
-\]
 \begin{enumerate}[(a)]
-\item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -8\), find the determinant of \(RC\).
+\item Find \(3 \times 3\) matrices \(S\) and \(T\) whose left multiplication represents the row operations \(3R_2\to R_2\) and \(R_3-2R_1\to R_3\), respectively.
+\item If \(A \in M_{3,3}\) is a matrix with \(\det A = 7\), find the determinant of \(STA\). 
 \end{enumerate}
 \end{problem}
 \begin{solution}
 \begin{enumerate}
-\item \(R= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \\ -2 & 0 & 1 \end{bmatrix}\).
-\item \(\det(RC)= \det(R)\det(C)=(1)(-8)=-8\).
+\item 
+\(S= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 3 & 0 \\ 0 & 0 & 1 \end{bmatrix}\).
+\(T= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \\ -2 & 0 & 1 \end{bmatrix}\).
+\item \(\det(STA)= 21\).
 \end{enumerate}
 \end{solution}
 
 \begin{problem}{G1}
-Consider the row operation \(4R_3\to R_3\) applied as follows to show
-\(A\sim B\):
-\[
-A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
-  \sim
-\begin{bmatrix}1&2&3\\4&5&6\\(4)7&(4)8&(4)9\end{bmatrix}=B
-\]
+
 \begin{enumerate}[(a)]
-\item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -12\), find the determinant of \(RC\).
+\item Find \(3 \times 3\) matrices \(S\) and \(T\) whose left multiplication represents the row operations \(3R_2\to R_2\) and \(4R_3\to R_3\), respectively.
+\item If \(A \in M_{3,3}\) is a matrix with \(\det A = -2\), find the determinant of \(STA\). 
 \end{enumerate}
 \end{problem}
 \begin{solution}
 \begin{enumerate}
-\item \(R= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 4 \end{bmatrix}\).
-\item \(\det(RC)= \det(R)\det(C)=(4)(-12)=-48\).
+\item 
+\(S= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 3 & 0 \\ 0 & 0 & 1 \end{bmatrix}\).
+\(T= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 4 \end{bmatrix}\).
+\item \(\det(STA)= -24\).
 \end{enumerate}
 \end{solution}
 
 \begin{problem}{G1}
-Consider the row operation \(-8R_1\to R_1\) applied as follows to show
-\(A\sim B\):
-\[
-A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
-  \sim
-\begin{bmatrix}(-8)1&(-8)2&(-8)3\\4&5&6\\7&8&9\end{bmatrix}=B
-\]
 \begin{enumerate}[(a)]
-\item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -2\), find the determinant of \(RC\).
+\item Find \(3 \times 3\) matrices \(S\) and \(T\) whose left multiplication represents the row operations \(-8R_1\to R_1\) and \(R_2+R_1 \to R_2\), respectively.
+\item If \(A \in M_{3,3}\) is a matrix with \(\det A = -2\), find the determinant of \(STA\). 
 \end{enumerate}
 \end{problem}
 \begin{solution}
 \begin{enumerate}
-\item \(R= \begin{bmatrix} -8 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\).
-\item \(\det(RC)= \det(R)\det(C)=(-8)(-2)=16\).
+\item 
+\(S= \begin{bmatrix} -8 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\) and
+\(T= \begin{bmatrix} 1 & 0 & 0 \\ 1 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\).
+\item \(\det(STA)=16\).
 \end{enumerate}
 \end{solution}
 
 \begin{problem}{G1}
-Consider the row operation \(5R_2\to R_2\) applied as follows to show
-\(A\sim B\):
-\[
-A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
-  \sim
-\begin{bmatrix}1&2&3\\(5)4&(5)5&(5)6\\7&8&9\end{bmatrix}=B
-\]
 \begin{enumerate}[(a)]
-\item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 3\), find the determinant of \(RC\).
+\item Find \(3 \times 3\) matrices \(S\) and \(T\) whose left multiplication represents the row operations \(5R_2\to R_2\) and \(R_2 \leftrightarrow R_3\), respectively.
+\item If \(A \in M_{3,3}\) is a matrix with \(\det A = -3\), find the determinant of \(STA\). 
 \end{enumerate}
 \end{problem}
 \begin{solution}
 \begin{enumerate}
-\item \(R= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 5 & 0 \\ 0 & 0 & 1 \end{bmatrix}\).
-\item \(\det(RC)= \det(R)\det(C)=(5)(3)=15\).
+\item 
+\(S= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 5 & 0 \\ 0 & 0 & 1 \end{bmatrix}\) and
+\(T= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 0 & 1 \\ 0 & 1 & 0 \end{bmatrix}\).
+\item \(\det(STA)=15\).
 \end{enumerate}
 \end{solution}
 
-\begin{problem}{G1}
-Consider the row operation that swaps \(R_1\) and \(R_2\) applied as follows to show
-\(A\sim B\):
-\[
-A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
-  \sim
-\begin{bmatrix}4&5&6\\1&2&3\\7&8&9\end{bmatrix}=B
-\]
-\begin{enumerate}[(a)]
-\item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 3\), find the determinant of \(RC\).
-\end{enumerate}
-\end{problem}
-\begin{solution}
-\begin{enumerate}
-\item \(R= \begin{bmatrix} 0 & 1 & 0 \\ 1 & 0 & 0 \\ 0 & 0 & 1 \end{bmatrix}\).
-\item \(\det(RC)= \det(R)\det(C)=(-1)(3)=-3\).
-\end{enumerate}
-\end{solution}
-
-\begin{problem}{G1}
-Consider the row operation that swaps \(R_3\) and \(R_2\) applied as follows to show
-\(A\sim B\):
-\[
-A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
-  \sim
-\begin{bmatrix}1&2&3\\7&8&9\\4&5&6\end{bmatrix}=B
-\]
-\begin{enumerate}[(a)]
-\item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -7\), find the determinant of \(RC\).
-\end{enumerate}
-\end{problem}
-\begin{solution}
-\begin{enumerate}
-\item \(R= \begin{bmatrix} 1 & 0 & 0 \\ 0 & 0 & 1 \\ 0 & 1 & 0 \end{bmatrix}\).
-\item \(\det(RC)= \det(R)\det(C)=(-1)(-7)=7\).
-\end{enumerate}
-\end{solution}
-
-\begin{problem}{G1}
-Consider the row operation that swaps \(R_3\) and \(R_1\) applied as follows to show
-\(A\sim B\):
-\[
-A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
-  \sim
-\begin{bmatrix}7&8&9\\4&5&6\\1&2&3\end{bmatrix}=B
-\]
-\begin{enumerate}[(a)]
-\item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -11\), find the determinant of \(RC\).
-\end{enumerate}
-\end{problem}
-\begin{solution}
-\begin{enumerate}
-\item \(R= \begin{bmatrix} 0 & 0 & 1 \\ 0 & 1 & 0 \\ 1 & 0 & 0 \end{bmatrix}\).
-\item \(\det(RC)= \det(R)\det(C)=(-1)(-11)=11\).
-\end{enumerate}
-\end{solution}
