--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -761,33 +761,16 @@ So the inverse is \(\begin{bmatrix}  1 & 2 & -11 & 32 \\ 0 & -1 & 4 & -14 \\  0 
 
 
 \begin{problem}{G1}
-Consider the row operation \(R_2-4R_1\to R_2\) applied as follows to show
-\(A\sim B\):
-\[
-A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
-  \sim
-\begin{bmatrix}1&2&3\\4-4(1)&5-4(2)&6-4(3)\\7&8&9\end{bmatrix}=B
-\]
 \begin{enumerate}[(a)]
-\item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 12\), find the determinant of \(RC\). 
+\item Find \(3 \times 3\) matrices \(S\) and \(T\) whose left multiplication represents the row operations \(R_2-4R_1 \to R_2\) and \(R_3 \leftrightarrow R_2\), respectively.
+\item If \(A \in M_{3,3}\) is a matrix with \(\det A = 12\), find the determinant of \(STA\). 
 \end{enumerate}
 \end{problem}
 \begin{solution}
 \begin{enumerate}
 \item 
-\(
-  I
-=
-  \begin{bmatrix}1&0&0\\0&1&0\\0&0&1\end{bmatrix}
-\sim
-  \begin{bmatrix} 1 & 0 & 0 \\ 0-4(1) & 1-4(0) & 0-4(0) \\ 0 & 0 & 1 \end{bmatrix}
-=
-  \begin{bmatrix} 1 & 0 & 0 \\ -4 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}
-=
-  R
-\)
-\item \(\det (RC) = \det(R) \det(C) = (1)(12)=12\).
+\(S=\begin{bmatrix} 1 & 0 & 0 \\ -4 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\) and \(T=\begin{bmatrix} 1 & 0 & 0 \\ 0 & 0 & 1 \\ 0 & 1 & 0 \end{bmatrix}\)
+\item \(\det (STA) = \det(S) \det(T) \det(A) = (1) (-1) (12) = -12\).
 \end{enumerate}
 \end{solution}
 
