--- a/tex/modules/4-A/exercises/A2.tex
+++ b/tex/modules/4-A/exercises/A2.tex
@@ -47,6 +47,12 @@ Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\
 \item Compute \(T\left( \begin{bmatrix} 2 \\ 1 \\ -1 \end{bmatrix}\right)\)
 \end{enumerate}
 \end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} -3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3 \\ 0 & 0 & 0 \end{bmatrix}\)
+\item \(\begin{bmatrix} -5 \\ -13 \\ -1 \\ 0 \end{bmatrix}\)
+\end{enumerate}
+\end{solution}
 
 \begin{problem}{A2}
 Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by the standard matrix
@@ -58,6 +64,12 @@ Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by the standa
 \item Compute \(T\left( \begin{bmatrix} -2 \\ 1 \\ -1 \end{bmatrix}\right)\)
 \end{enumerate}
 \end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} 2x+y-z \\ y+3z \\ 2x-y+5z \\ 0 \end{bmatrix}\)
+\item \(\begin{bmatrix} -2 \\ -2 \\ -10 \\ 0 \end{bmatrix}\)
+\end{enumerate}
+\end{solution}
 
 \begin{problem}{A2}
 Let $T: \IR^2\rightarrow \IR^4$ be the linear transformation given by the requirements
@@ -72,6 +84,12 @@ T(\vec e_2)=\begin{bmatrix}
 \item Compute \(T\left( \begin{bmatrix}  1 \\ -1 \end{bmatrix}\right)\)
 \end{enumerate}
 \end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} 2x+y \\ y \\ 2x-y \\ 3x+3y \end{bmatrix}\)
+\item \(\begin{bmatrix} 1 \\ -1 \\ 3 \\ 0 \end{bmatrix}\)
+\end{enumerate}
+\end{solution}
 
 \begin{problem}{A2}
 Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -3x+y \\ -8x+2y-z \\ 7x+2y+3z \\ 0 \end{bmatrix}.$$
@@ -80,6 +98,12 @@ Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\
 \item Compute \( T\left( \begin{bmatrix}-2 \\ 0 \\ 3 \end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} -3 & 1 & 0 \\ -8 & 2 & -1 \\ 7 & 2 & 3 \\ 0 & 0 & 0  \end{bmatrix}\)
+\item \(\begin{bmatrix} 6 \\ 13 \\ -5 \\ 0 \end{bmatrix}\)
+\end{enumerate}
+\end{solution}
 
 
 
@@ -91,6 +115,12 @@ $$\begin{bmatrix} 3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3 \\ 7 & 0 & 0 \end{bmatri
 \item Compute \( T\left( \begin{bmatrix}-2 \\ 1 \\ 3 \end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} 3x+y \\ -8x+2y-z \\ 2y+3z \\ 7x \end{bmatrix}\)
+\item \(\begin{bmatrix} -5 \\ 15 \\ 11 \\ -14 \end{bmatrix}\)
+\end{enumerate}
+\end{solution}
 
 \begin{problem}{A2}
 Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by the standard matrix
@@ -100,6 +130,12 @@ $$\begin{bmatrix} 1 & 0 & 3 & 0 \\ 0 & 3 & -5 & 0 \end{bmatrix}.$$
 \item Compute \( T\left( \begin{bmatrix} 1 \\ 3 \\ -1 \\ 2\end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix}x+3z \\ 3y-5z \end{bmatrix}\)
+\item \(\begin{bmatrix} -2 \\ 14 \end{bmatrix}\)
+\end{enumerate}
+\end{solution}
 
 \begin{problem}{A2}
 Let $T: \IR^2 \rightarrow \IR^4$ be the linear transformation given by the following
@@ -110,6 +146,12 @@ T(\vec e_2)=\begin{bmatrix} 0 \\ 3 \\ -5 \\ 0 \end{bmatrix}.$$
 \item Compute \( T\left( \begin{bmatrix} 2 \\ -3\end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} x \\ 3y \\ 3x-5y \\ 0 \end{bmatrix}\)
+\item \(\begin{bmatrix} 2 \\ -9 \\ 21 \\ 0\end{bmatrix}\)
+\end{enumerate}
+\end{solution}
 
 \begin{problem}{A2}
 Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3 \\ x_4 \end{bmatrix} \right) = \begin{bmatrix} x_1+3x_3 \\ 3x_2-x_3 \end{bmatrix}.$$
@@ -118,6 +160,12 @@ Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by $$T\left(
 \item Compute \( T\left( \begin{bmatrix} 1 \\ 3 \\ -1 \\ 2 \end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} 1 & 0 & 3 & 0 \\ 0 & 3 & -1 & 0  \end{bmatrix}\)
+\item \(\begin{bmatrix}  -2 \\ 10 \end{bmatrix}\)
+\end{enumerate}
+\end{solution}
 
 
 \begin{problem}{A2}
@@ -127,6 +175,12 @@ Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by $$T\left(
 \item Compute \( T\left( \begin{bmatrix} 1 \\ 3  \\ -1 \\ 2\end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} 1 & 0 & 3 & 0 \\ 0 & 3 & -5 & 0  \end{bmatrix}\)
+\item \(\begin{bmatrix}  -2 \\ 14 \end{bmatrix}\)
+\end{enumerate}
+\end{solution}
 
 
 
@@ -139,6 +193,12 @@ $$\begin{bmatrix} 0 & 1 & 3 \end{bmatrix}.$$
 \item Compute \( T\left( \begin{bmatrix} 2 \\ 3 \\ -1\end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} y+3z  \end{bmatrix}\)
+\item \(\begin{bmatrix}  0 \end{bmatrix}\)
+\end{enumerate}
+\end{solution}
 
 \begin{problem}{A2}
 Let $T: \IR^2 \rightarrow \IR^3$ be the linear transformation given by the following
@@ -156,6 +216,12 @@ Let $T: \IR^2 \rightarrow \IR^3$ be the linear transformation given by the follo
 \item Compute \( T\left( \begin{bmatrix} 1\\ 3\end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} 3y \\ x \\ 3x  \end{bmatrix}\)
+\item \(\begin{bmatrix}  9 \\ 1 \\ 3 \end{bmatrix}\)
+\end{enumerate}
+\end{solution}
 
 
 
@@ -167,3 +233,9 @@ $$\begin{bmatrix} 3 & 0 & 1 \end{bmatrix}$$
 \item Compute \( T\left( \begin{bmatrix} -2 \\ 4 \\ 3\end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} 3x+z  \end{bmatrix}\)
+\item \(\begin{bmatrix} -3 \end{bmatrix}\)
+\end{enumerate}
+\end{solution}
